--- a/views/destinations/index.ejs
+++ b/views/destinations/index.ejs
@@ -5,14 +5,17 @@
 <% destinations.forEach(function(destination) { %>
     <div class="destination">
         <figure>
-            <a href="/destinations/<%= destination._id %>"><img src="<%= destination.image %>" width="500"></a>             
+            <a href="/destinations/<%= destination._id %>"><img src="<%= destination.image %>"></a>             
         </figure>
         <br>
         <div id="remove-destination">
-            <a href="/destinations/<%= destination._id %>"><%= destination.name %></a> 
+            <a href="/destinations/<%= destination._id %>"><%= destination.name %></a>
+        <% if(user) { %>
             <form action="/destinations/<%= destination._id %>?_method=DELETE" method="POST">
                 <button class="btn" type="submit">Remove</button>
-            </form>
+            </form>            
+        <% } %> 
+
         </div>
 
         <p><%= destination.city %>, <%= destination.state %>, <%= destination.country %></p>
