wip: fixes how location displays

--- a/views/destinations/index.ejs
+++ b/views/destinations/index.ejs
@@ -18,7 +18,11 @@
 
         </div>
 
-        <p><%= destination.city %>, <%= destination.state %>, <%= destination.country %></p>
+        <p><%= destination.city %>, 
+            <% if(destination.state) { %>
+                <%= destination.state %>,
+            <% } %>
+             <%= destination.country %></p>
         <p><%= destination.price %></p>
     </div>
 
