--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -116,10 +116,10 @@ div.destination:hover img {
 }
 
 img.card {
-
   min-width: 200px;
   max-width: 250px;
   max-height: 250px;
+  object-fit: fill;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
 	-webkit-transform: scale(1);
@@ -182,6 +182,7 @@ img.card:hover {
 .comment-user-info > p {
   margin: 5px;
 }
+
 #remove-destination {
   display: flex;
   justify-content: space-between;
