wip: updates readme

--- a/views/destinations/show.ejs
+++ b/views/destinations/show.ejs
@@ -108,7 +108,7 @@
         <% } %>
     </section>
 </div>
-        <script src="/script.js">
+        <script src="/scripts/script.js">
         </script>
 
 <%- include('../partials/footer') %> 
