wip: adds delete comment function

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -217,6 +217,14 @@ img.card:hover {
   cursor: pointer; 
 }
 
+.link-override:hover {
+  transform: none;
+}
+
+.footer-element {
+  margin: 0 10px 0 10px;
+}
+
 /* -------------- MODAL CSS BELOW -------------- */
 
         /* The Modal (background) */
