--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,16 @@
             </main>
-        <footer>All Rights Reserved &copy 2021</footer>
+        <footer>
+            <p class="footer-element">
+            All Rights Reserved &copy 2021    
+            </p>
+            
+        
+            <a href="https://github.com/cocampo0915/Project-2" class="link-override">
+            <img src="https://i.imgur.com/0qFUUdI.png" alt="github" width="20px" class="footer-element">
+            </a>
+            <a href="https://www.linkedin.com/in/camille-ocampo/" class="link-override">
+            <img src="https://i.imgur.com/IXEfIZg.png" alt="linkedin" height="20px" class="footer-element">
+            </a>
+        </footer>
     </body>
 </html>
